Manejo de errors
Se usan vistas controladas para el manejo de errores 404 (Not Found) y 500 (Internal Server Error)

--- a/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacora</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Prueba Error" asp-action="Index">Prueba de Error</a>
+                                </li>
                             }
 
                             <!-- MÓDULOS DEL CAJERO -->
